--- a/package.json
+++ b/package.json
@@ -3,16 +3,20 @@
   "version": "0.0.0",
   "private": true,
   "hexo": {
-    "version": "3.8.0"
+    "version": "3.9.0"
   },
   "dependencies": {
-    "hexo": "^3.8.0",
+    "hexo": "^3.9.0",
+    "hexo-abbrlink": "^2.0.5",
     "hexo-admin": "^2.3.0",
     "hexo-asset-image": "git+https://github.com/CodeFalling/hexo-asset-image.git",
+    "hexo-autonofollow": "^1.0.1",
     "hexo-blog-encrypt": "^2.1.1",
+    "hexo-cli": "^2.0.0",
     "hexo-deployer-git": "^1.0.0",
     "hexo-filter-flowchart": "^1.0.4",
     "hexo-filter-github-emojis": "^2.0.1",
+    "hexo-filter-sequence": "^1.0.3",
     "hexo-generator-archive": "^0.1.5",
     "hexo-generator-baidu-sitemap": "^0.1.6",
     "hexo-generator-category": "^0.1.3",
@@ -21,7 +25,7 @@
     "hexo-generator-json-content": "^4.1.3",
     "hexo-generator-sitemap": "^1.2.0",
     "hexo-generator-tag": "^0.2.0",
-    "hexo-github-card": "^1.0.2",
+    "hexo-github-card": "^1.0.3",
     "hexo-helper-live2d": "^3.1.1",
     "hexo-pdf": "^1.1.1",
     "hexo-reading-time": "^1.0.3",
