--- a/themes/yilia/_config.yml
+++ b/themes/yilia/_config.yml
@@ -3,19 +3,21 @@ menu:
   Home: /
   Archives: /archives
   随笔: /tags/随笔
+  分类: /categories
 
 # SubNav
 subnav:
   github: "https://github.com/tyrantqiao"
   # weibo: "https://weibo.com/tyrantqiao/home"
-#  rss: "#"
+  # rss订阅
+  rss: "atom.xml"
   # zhihu: "https://www.zhihu.com/people/bao-jun-qiao"
-  qq: "51307521"
+  qq: "/assets/img/qq.jpg"
   #weixin: "#"
   #jianshu: "#"
   # douban: "https://www.douban.com/people/tyrantqiao/"
   #segmentfault: "#"
-  mail: "tyrantqiao@gmail.com"
+  mail: "mailto:tyrantqiao@gmail.com"
   facebook: "https://www.facebook.com/TyrantQiao"
   #google: "#"
   #twitter: "#"
@@ -44,9 +46,9 @@ reward_type: 2
 # 打赏wording
 reward_wording: '蟹蟹大佬的打赏，大家一起进步'
 # 支付宝二维码图片地址，跟你设置头像的方式一样。比如：/assets/img/alipay.jpg
-alipay: /assets/img/alipay.jpg
+alipay: /assets/img/alipay.png
 # 微信二维码图片地址
-weixin: /assets/img/wechat.jpg
+weixin: /assets/img/wechat.png
 
 # 目录
 # 目录设定：0-不显示目录； 1-文章对应的md文件里有toc:true属性，才有目录； 2-所有文章均显示目录
